--- a/HEATTemplates/templates/autoscaling.yaml
+++ b/HEATTemplates/templates/autoscaling.yaml
@@ -18,7 +18,7 @@ parameters:
     description: Network used by the server
 resources:
   db:
-    type: mysql_db_server.yaml
+    type: ASRL::Nova::MySQLDB
     properties:
       image:
         get_param: image
@@ -32,7 +32,7 @@ resources:
       min_size: 1
       max_size: 8
       resource:
-        type: tomcat_server.yaml
+        type: ASRL::Nova::Tomcat
         properties:
           flavor:
             get_param: flavor
@@ -100,7 +100,7 @@ resources:
           get_param: OS::stack_id
       comparison_operator: lt
   lb:
-    type: apache_lb_server.yaml
+    type: ASRL::Nova::ApacheLB
     properties:
       image: 
         get_param: image
