Fixed bug with env.yaml

--- a/HEATTemplates/templates/env.yaml
+++ b/HEATTemplates/templates/env.yaml
@@ -1,4 +1,4 @@
 resource_registry:
-  ASRL::Nova::ApacheLB: https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/apache_lb_server.yaml
-  ASRL::Nova::MySQLDB: https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/mysql_db_server.yaml
-  ASRL::Nova::Tomcat: https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/tomcat_server.yaml
+  "ASRL::Nova::ApacheLB": https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/apache_lb_server.yaml
+  "ASRL::Nova::MySQLDB": https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/mysql_db_server.yaml
+  "ASRL::Nova::Tomcat": https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/tomcat_server.yaml
