--- a/HEATTemplates/templates/mysql_db_server.yaml
+++ b/HEATTemplates/templates/mysql_db_server.yaml
@@ -27,13 +27,13 @@ resources:
         str_replace:
           template: |
             #!/bin/bash -v
-            sudo bash -c "DEBIAN_FRONTEND=noninteractive aptitude install -q -y mysql-server"  > /dev/null 2> errors.log
-            sudo mysql -uroot -e "UPDATE mysql.user SET Password=PASSWORD('$db_rootpassword') WHERE User='root'; FLUSH PRIVILEGES;" > /dev/null 2> errors.log
-            sudo wget http://ceras.eso.yorku.ca/etavirp/mysql/mySqlScript.sql > /dev/null 2> errors.log
-            sudo mysql -uroot -p$db_rootpassword < mySqlScript.sql > /dev/null 2> errors.log
+            bash -c "DEBIAN_FRONTEND=noninteractive aptitude install -q -y mysql-server"  > /dev/null 2> errors.log
+            mysql -uroot -e "UPDATE mysql.user SET Password=PASSWORD('$db_rootpassword') WHERE User='root'; FLUSH PRIVILEGES;" > /dev/null 2> errors.log
+            wget -q http://ceras.eso.yorku.ca/etavirp/mysql/mySqlScript.sql > /dev/null 2> errors.log
+            mysql -uroot -p$db_rootpassword < mySqlScript.sql > /dev/null 2> errors.log
             rm -rf mySqlScript.sql > /dev/null 2> errors.log
             # download the config file
-            wget http://ceras.eso.yorku.ca/etavirp/mysql/my.cnf -O my.cnf.bkp
+            wget -q http://ceras.eso.yorku.ca/etavirp/mysql/my.cnf -O my.cnf.bkp
             # generate the new config file with the bind address replaced
             while read LINE
             do
@@ -43,9 +43,9 @@ resources:
             # remove the local backup
             rm -f my.cnf.bkp
             # do a backup for the file on the server
-            sudo mv /etc/mysql/my.cnf /etc/mysql/my.cnf.bkp
+            mv /etc/mysql/my.cnf /etc/mysql/my.cnf.bkp
             # copy the configuration file to the right location
-            sudo mv -f my.cnf /etc/mysql/my.cnf
+            mv -f my.cnf /etc/mysql/my.cnf
                     
             
           params:
