--- a/HEATTemplates/templates/autoscaling_full.yaml
+++ b/HEATTemplates/templates/autoscaling_full.yaml
@@ -33,13 +33,13 @@ resources:
         str_replace:
           template: |
             #!/bin/bash -v
-            sudo bash -c "DEBIAN_FRONTEND=noninteractive aptitude install -q -y mysql-server"  > /dev/null 2> errors.log
-            sudo mysql -uroot -e "UPDATE mysql.user SET Password=PASSWORD('$db_rootpassword') WHERE User='root'; FLUSH PRIVILEGES;" > /dev/null 2> errors.log
-            sudo wget http://ceras.eso.yorku.ca/etavirp/mysql/mySqlScript.sql > /dev/null 2> errors.log
-            sudo mysql -uroot -p$db_rootpassword < mySqlScript.sql > /dev/null 2> errors.log
+            bash -c "DEBIAN_FRONTEND=noninteractive aptitude install -q -y mysql-server"  > /dev/null 2> errors.log
+            mysql -uroot -e "UPDATE mysql.user SET Password=PASSWORD('$db_rootpassword') WHERE User='root'; FLUSH PRIVILEGES;" > /dev/null 2> errors.log
+            wget -q http://ceras.eso.yorku.ca/etavirp/mysql/mySqlScript.sql > /dev/null 2> errors.log
+            mysql -uroot -p$db_rootpassword < mySqlScript.sql > /dev/null 2> errors.log
             rm -rf mySqlScript.sql > /dev/null 2> errors.log
             # download the config file
-            wget http://ceras.eso.yorku.ca/etavirp/mysql/my.cnf -O my.cnf.bkp
+            wget -q http://ceras.eso.yorku.ca/etavirp/mysql/my.cnf -O my.cnf.bkp
             # generate the new config file with the bind address replaced
             while read LINE
             do
@@ -49,9 +49,9 @@ resources:
             # remove the local backup
             rm -f my.cnf.bkp
             # do a backup for the file on the server
-            sudo mv /etc/mysql/my.cnf /etc/mysql/my.cnf.bkp
+            mv /etc/mysql/my.cnf /etc/mysql/my.cnf.bkp
             # copy the configuration file to the right location
-            sudo mv -f my.cnf /etc/mysql/my.cnf
+            mv -f my.cnf /etc/mysql/my.cnf
                     
             
           params:
@@ -80,35 +80,35 @@ resources:
                 str_replace:
                   template: |
                         #!/bin/bash -v
-                        sudo apt-get install --assume-yes tomcat7 > /dev/null 2> errors.log
-                        sudo iptables -t nat -A PREROUTING -p tcp --dport 80 -j REDIRECT --to-port 8080 > /dev/null 2> errors.log
-                        sudo iptables -t nat -A PREROUTING -p tcp --dport 433 -j REDIRECT --to-port 8433 > /dev/null 2> errors.log
-                        sudo mv /usr/share/tomcat7/bin/catalina.sh /usr/share/tomcat7/bin/catalina.sh.bkp
-                        sudo wget $TOMCAT_CONFIG_URL_BASE/catalina.sh -O /usr/share/tomcat7/bin/catalina.sh > /dev/null 2> errors.log
-                        sudo chmod +x /usr/share/tomcat7/bin/catalina.sh
+                        apt-get -q install --assume-yes tomcat7 > /dev/null 2> errors.log
+                        iptables -t nat -A PREROUTING -p tcp --dport 80 -j REDIRECT --to-port 8080 > /dev/null 2> errors.log
+                        iptables -t nat -A PREROUTING -p tcp --dport 433 -j REDIRECT --to-port 8433 > /dev/null 2> errors.log
+                        mv /usr/share/tomcat7/bin/catalina.sh /usr/share/tomcat7/bin/catalina.sh.bkp
+                        wget -q $TOMCAT_CONFIG_URL_BASE/catalina.sh -O /usr/share/tomcat7/bin/catalina.sh > /dev/null 2> errors.log
+                        chmod +x /usr/share/tomcat7/bin/catalina.sh
                         # check if tomcat is running
                         if [ -f "/var/run/tomcat7.pid" ]; then
-                          sudo /etc/init.d/tomcat7 stop > /dev/null
+                          /etc/init.d/tomcat7 stop > /dev/null
                         fi
-                        sudo /etc/init.d/tomcat7 start > /dev/null
-                        sudo wget http://ceras.eso.yorku.ca/etavirp/tomcat/DatabaseOperations.war -O DatabaseOperations.war > /dev/null 2> errors.log
-                        sudo apt-get install --assume-yes unzip > /dev/null 2> errors.log
-                        sudo unzip DatabaseOperations.war -d DatabaseOperations > /dev/null
-                        sudo cp -rf DatabaseOperations /var/lib/tomcat7/webapps/
-                        sudo chown -R tomcat6:tomcat7 /var/lib/tomcat6/webapps/DatabaseOperations
-                        sudo rm -rf DatabaseOperations*
+                        /etc/init.d/tomcat7 start > /dev/null
+                        wget -q http://ceras.eso.yorku.ca/etavirp/tomcat/DatabaseOperations.war -O DatabaseOperations.war > /dev/null 2> errors.log
+                        apt-get -q install --assume-yes unzip > /dev/null 2> errors.log
+                        unzip DatabaseOperations.war -d DatabaseOperations > /dev/null
+                        cp -rf DatabaseOperations /var/lib/tomcat7/webapps/
+                        chown -R tomcat6:tomcat7 /var/lib/tomcat6/webapps/DatabaseOperations
+                        rm -rf DatabaseOperations*
                         
-                        sudo /etc/init.d/tomcat7 stop > /dev/null
-                        sudo iptables -t nat -A PREROUTING -p tcp --dport 80 -j REDIRECT --to-port 8080 > /dev/null
-                        sudo sed -e "s/url.*:3306/url=\"jdbc:mysql:\\/\\/$db_host:3306/" /etc/tomcat7/Catalina/localhost/DatabaseOperations.xml > tmp
-                        sudo mv /etc/tomcat7/Catalina/localhost/DatabaseOperations.xml oldDB.xml > /dev/null 
-                        sudo mv tmp /etc/tomcat7/Catalina/localhost/DatabaseOperations.xml > /dev/null
-                        sudo cat /etc/tomcat6/Catalina/localhost/DatabaseOperations.xml > /dev/null
-                        sudo sed -e "s/url.*:3306/url=\"jdbc:mysql:\\/\\/$db_host:3306/" /var/lib/tomcat7/webapps/DatabaseOperations/META-INF/context.xml > tmp
-                        sudo mv /var/lib/tomcat7/webapps/DatabaseOperations/META-INF/context.xml oldContext.xml > /dev/null 
-                        sudo mv tmp /var/lib/tomcat7/webapps/DatabaseOperations/META-INF/context.xml > /dev/null
-                        sudo cat /var/lib/tomcat7/webapps/DatabaseOperations/META-INF/context.xml > /dev/null
-                        sudo /etc/init.d/tomcat7 start > /dev/null
+                        /etc/init.d/tomcat7 stop > /dev/null
+                        iptables -t nat -A PREROUTING -p tcp --dport 80 -j REDIRECT --to-port 8080 > /dev/null
+                        sed -e "s/url.*:3306/url=\"jdbc:mysql:\\/\\/$db_host:3306/" /etc/tomcat7/Catalina/localhost/DatabaseOperations.xml > tmp
+                        mv /etc/tomcat7/Catalina/localhost/DatabaseOperations.xml oldDB.xml > /dev/null 
+                        mv tmp /etc/tomcat7/Catalina/localhost/DatabaseOperations.xml > /dev/null
+                        cat /etc/tomcat6/Catalina/localhost/DatabaseOperations.xml > /dev/null
+                        sed -e "s/url.*:3306/url=\"jdbc:mysql:\\/\\/$db_host:3306/" /var/lib/tomcat7/webapps/DatabaseOperations/META-INF/context.xml > tmp
+                        mv /var/lib/tomcat7/webapps/DatabaseOperations/META-INF/context.xml oldContext.xml > /dev/null 
+                        mv tmp /var/lib/tomcat7/webapps/DatabaseOperations/META-INF/context.xml > /dev/null
+                        cat /var/lib/tomcat7/webapps/DatabaseOperations/META-INF/context.xml > /dev/null
+                        /etc/init.d/tomcat7 start > /dev/null
                   params:
                     $db_host:
                       get_attr: [db,first_address]
@@ -182,8 +182,8 @@ resources:
                 #!/bin/bash -v
                 
                 # install dependencies
-                apt-get update
-                apt-get -y install apache2 python
+                apt-get -q update
+                apt-get -q -y install apache2 python
                 
                 cp /etc/apache2/mods-available/proxy.conf /etc/apache2/mods-available/proxy_bkp.conf
                 cp /etc/apache2/mods-available/proxy_balancer.conf /etc/apache2/mods-available/proxy_balancer_bkp.conf
@@ -208,7 +208,7 @@ resources:
                 
                 service apache2 start
                 
-                wget http://hypatia.cs.ualberta.ca/~fokaefs/update.py -O /etc/apache2/update.py
+                wget -q http://hypatia.cs.ualberta.ca/~fokaefs/update.py -O /etc/apache2/update.py
                 
                 # add a cron job to monitor the metadata and update haproxy
                 crontab -l >_crontab || true
