Fixed (potential) bug with LB servers

--- a/HEATTemplates/templates/autoscaling_full.yaml
+++ b/HEATTemplates/templates/autoscaling_full.yaml
@@ -174,7 +174,7 @@ resources:
         get_param: key
       metadata:
         servers:
-          get_attr: [asg, first_address]
+          get_attr: [asg, outputs_list, first_address]
       networks:
       - network:
           get_param: network
