--- a/HEATTemplates/templates/autoscaling_full.yaml
+++ b/HEATTemplates/templates/autoscaling_full.yaml
@@ -182,8 +182,8 @@ resources:
                 #!/bin/bash -v
                 
                 # install dependencies
-                apt-get update
-                apt-get -y install apache2 python
+                sudo apt-get update
+                sudo apt-get -y install apache2 python
                 
                 cp /etc/apache2/mods-available/proxy.conf /etc/apache2/mods-available/proxy_bkp.conf
                 cp /etc/apache2/mods-available/proxy_balancer.conf /etc/apache2/mods-available/proxy_balancer_bkp.conf
