--- a/HEATTemplates/templates/autoscaling_full.yaml
+++ b/HEATTemplates/templates/autoscaling_full.yaml
@@ -212,7 +212,7 @@ resources:
                 
                 # add a cron job to monitor the metadata and update haproxy
                 crontab -l >_crontab || true
-                echo "* * * * * curl -s http://169.254.169.254/openstack/latest/meta_data.json | python /etc/haproxy/update.py | /usr/bin/logger -t haproxy_update" >>_crontab
+                echo "* * * * * curl -s http://169.254.169.254/openstack/latest/meta_data.json | python /etc/apache2/update.py | /usr/bin/logger -t haproxy_update" >>_crontab
                 crontab <_crontab
                 rm _crontab
       user_data_format: RAW 
