--- a/HEATTemplates/templates/autoscaling_full.yaml
+++ b/HEATTemplates/templates/autoscaling_full.yaml
@@ -49,10 +49,7 @@ resources:
               get_attr:
               - database_root_password
               - value
-            $db_host:
-              get_attr:
-              - db
-              - first_address
+            $db_host: {get_attr: [db, networks, get_param: network, 0]}
   asg:
     type: OS::Heat::AutoScalingGroup
     properties:
@@ -84,7 +81,7 @@ resources:
                         /etc/init.d/tomcat7 start
                   params:
                     $db_host:
-                      get_attr: [db,first_address]
+                      get_attr: [db, networks, get_param: network, 0]
               user_data_format: RAW
   web_server_scaleup_policy:
     type: OS::Heat::ScalingPolicy
@@ -185,17 +182,17 @@ resources:
                 
                 # add a cron job to monitor the metadata and update haproxy
                 crontab -l >_crontab || true
-                echo "* * * * * curl -s http://169.254.169.254/openstack/latest/meta_data.json | python /etc/apache2/update.py | /usr/bin/logger -t haproxy_update" >>_crontab
+                echo "* * * * * curl -s http://169.254.169.254/openstack/latest/meta_data.json | python /etc/apache2/update.py | /usr/bin/logger -t apache2_update" >>_crontab
                 crontab <_crontab
                 rm _crontab
       user_data_format: RAW 
 outputs:
   load_balancer_ip:
     description: The private IP address of the load balancer.
-    value: { get_attr: [lb, first_address]}
+    value: { get_attr: [lb, networks, get_param: network, 0]}
   server_ips:
     description: The public IP address of the newly configured Server.
-    value: { get_attr: [asg, outputs_list, first_address] }
+    value: { get_attr: [asg, outputs_list, networks, get_param: network, 0] }
   scale_up_url:
     description: |
       This URL is the webhook to scale up the autoscaling group.  You can invoke the scale-up operation by doing an HTTP POST to this URL; no body nor extra headers are needed.
@@ -218,7 +215,9 @@ outputs:
           host:
             get_attr:
             - lb
-            - first_address
+            - networks
+            - get_param: network
+            - 0
     description: |
       This URL is the "external" URL that can be used to access the Wordpress site.
   ceilometer_query:
