Fixed small bug with files in the db script.

--- a/HEATTemplates/templates/autoscaling_full.yaml
+++ b/HEATTemplates/templates/autoscaling_full.yaml
@@ -40,9 +40,10 @@ resources:
             mysql -uroot -p$db_rootpassword < mySqlScript.sql
             rm -rf mySqlScript.sql
             db_host = $(curl http://169.254.169.254/openstack/latest/local-ipv4) 
-            sed -i "s/bind-address            = 127.0.0.1/bind-address            = $db_host/g" /etc/mysql/my.cnf > tmp
-            mv tmp /etc/mysql/my.cnf
-            rm -f tmp
+            echo db_host
+            sed -i "s/bind-address            = 127.0.0.1/bind-address            = $db_host/g" /etc/mysql/my.cnf > tmp.cnf
+            mv tmp.cnf /etc/mysql/my.cnf
+            rm -f tmp.cnf
                     
             
           params:
