Fixed mysql script Added fixed mysql query

--- a/HEATTemplates/templates/autoscaling_full.yaml
+++ b/HEATTemplates/templates/autoscaling_full.yaml
@@ -33,24 +33,23 @@ resources:
         str_replace:
           template: |
             #!/bin/bash -v
-#            apt-get update
-#            apt-get install -y mysql-server
-#            mysql -uroot -e "UPDATE mysql.user SET Password=PASSWORD('$db_rootpassword') WHERE User='root'; FLUSH PRIVILEGES;"
-#            wget http://ceras.eso.yorku.ca/etavirp/mysql/mySqlScript.sql
-#            mysql -uroot -p$db_rootpassword < mySqlScript.sql
-#            rm -rf mySqlScript.sql
-#            db_host = $(curl http://169.254.169.254/openstack/latest/local-ipv4) 
-#            echo $db_host
-#            sed -i "s/bind-address            = 127.0.0.1/bind-address            = $db_host/g" /etc/mysql/my.cnf > tmp.cnf
-#            mv tmp.cnf /etc/mysql/my.cnf
-#            rm -f tmp.cnf
-#                    
-#            
-#          params:
-#            $db_rootpassword:
-#              get_attr:
-#              - database_root_password
-#              - value
+            apt-get update
+            debconf-set-selections <<< "mysql-server mysql-server/root_password password $db_rootpassword"
+            debconf-set-selections <<< "mysql-server mysql-server/root_password_again password $db_rootpassword"
+            apt-get install -y mysql-server
+            wget https://raw.githubusercontent.com/fokaefs/ASRL_HEAT_Openstack/master/HEATTemplates/templates/mySqlScript.sql
+            mysql -uroot -p$db_rootpassword < mySqlScript.sql
+            rm -rf mySqlScript.sql
+            db_host=$(curl http://169.254.169.254/latest/meta-data/local-ipv4) 
+            echo $db_host
+            wget http://ceras.eso.yorku.ca/etavirp/mysql/my.cnf -O /etc/mysql/my.cnf
+            sed -i "/bind-address/c\bind-address = $db_host" /etc/mysql/my.cnf                    
+            
+          params:
+            $db_rootpassword:
+              get_attr:
+              - database_root_password
+              - value
             #$db_host: {get_attr: [db, networks, get_param: network, 0]}
   asg:
     type: OS::Heat::AutoScalingGroup
