--- a/HEATTemplates/templates/autoscaling_full.yaml
+++ b/HEATTemplates/templates/autoscaling_full.yaml
@@ -76,10 +76,10 @@ resources:
                         apt-get install -y tomcat7
                         wget http://ceras.eso.yorku.ca/etavirp/tomcat/DatabaseOperations.war -O /var/lib/tomcat7/webapps/DatabaseOperations.war
                         
-                        /etc/init.d/tomcat7 stop
+                        /etc/init.d/tomcat7 restart
                         sed -e "s/url.*:3306/url=\"jdbc:mysql:\\/\\/$db_host:3306\\/SimpleDatabase/" /var/lib/tomcat7/webapps/DatabaseOperations/META-INF/context.xml
                         wget http://ceras.eso.yorku.ca/etavirp/tomcat/mysql-connector-java-5.1.10-bin.jar -O /var/lib/tomcat7/webapps/DatabaseOperations/WEB-INF/lib/mysql-connector-java-5.1.10-bin.jar
-                        /etc/init.d/tomcat7 start
+                        
                   params:
                     $db_host:
                       get_attr: [db, networks, get_param: network, 0]
