--- a/HEATTemplates/templates/autoscaling_full.yaml
+++ b/HEATTemplates/templates/autoscaling_full.yaml
@@ -74,6 +74,7 @@ resources:
                         #!/bin/bash -v
                         apt-get update
                         apt-get install -y tomcat7
+                        iptables -t nat -A PREROUTING -p tcp --dport 80 -j REDIRECT --to-port 8080
                         wget http://ceras.eso.yorku.ca/etavirp/tomcat/DatabaseOperations.war -O /var/lib/tomcat7/webapps/DatabaseOperations.war
                         
                         /etc/init.d/tomcat7 restart
